--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="timepickr.css">
   </head>
-  <body class="container">
+  <body class="container"><a href="https://github.com/thomporter/angular-timepickr"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     <h1>Angular Timepickr</h1>
     <p>Inspired by <a href="http://haineault.com/media/jquery/ui-timepickr/page/">http://haineault.com/media/jquery/ui-timepickr/page/</a></p>
     <p>Currently a long ways off from the inspiration.</p>
@@ -15,7 +15,7 @@
       <li>Embeded on page - no "mouse over" features (yet)</li>
       <li>Only tested in Chrome</li>
     </ol>
-    <h2>Demo</h2>
+    <h2>Demo 1</h2>
     <p>Bound directly to scope property ($scope.test_time)</p>
     <div ng-controller="DemoCtrl">
       <input ng-model="test_time">
